syntax = "proto3";

option java_multiple_files = true;

package br.com.zup.edu;
import "google/protobuf/timestamp.proto";

service KeyManagerService {
  rpc registrar (ChavePixRequest) returns (ChavePixResponse) {}
}

service KeyManagerRemoveService {
  rpc remover (RemoveChavePixRequest) returns (RemoveChavePixResponse) {}
}

service KeyManagerBuscaService {
  rpc buscar (BuscaChavePixRequest) returns (BuscaChavePixResponse) {}
}

service KeyManagerListaService {
  rpc listar (ListaChavePixRequest) returns (ListaChavePixResponse) {}
}

enum TipoChave {
  TIPO_CHAVE_DESCONHECIDA = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoConta {
  TIPO_CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}


message ChavePixRequest {
  string clienteId = 1;
  TipoChave tipoChave = 2;
  string chavePix = 3;
  TipoConta tipoConta = 4;
}

message ChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}

message RemoveChavePixRequest {
  string clienteId = 1;
  string pixId = 2;
}

message RemoveChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}

message BuscaChavePixRequest {
  message FiltroPorPixId {
    string clienteId = 1;
    string pixId = 2;
  }

  oneof filtro {
    FiltroPorPixId pixId = 1;
    string chave = 2;
  }
}

message BuscaChavePixResponse {
  message ChavePix {
    message ContaInfo {
      TipoConta tipoConta = 1;
      string instituicao = 2;
      string nomeTitular = 3;
      string cpfTitular = 4;
      string agencia = 5;
      string numeroConta = 6;
    }

    TipoChave tipoChave = 1;
    string chave = 2;
    ContaInfo conta = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }

  string clienteId = 1;
  string pixId = 2;
  ChavePix chavePix = 3;
}

message ListaChavePixRequest {
  string clienteId = 1;
}

message ListaChavePixResponse {
  message ChavePix {
    string pixId = 1;
    TipoChave tipoChave = 2;
    string chavePix = 3;
    TipoConta tipoConta = 4;
    google.protobuf.Timestamp criadaEm = 5;
  }

  string clienteId = 1;
  repeated ChavePix chavesPix = 2;
}